Updates on format

--- a/coffee/index.html
+++ b/coffee/index.html
@@ -1,7 +1,8 @@
 <html>
 <body>
 
-<h1>Dream Beans Caffee</h1>
+<Title>Dream Beans Coffee</Title>
+<h1>Dream Beans Coffee</h1>
 
 <li>about</li>
 <li>beans</li>
@@ -18,8 +19,8 @@
 
 <p>Caffeine percolator café au lait body robust espresso variety kopi-luwak. Extraction cortado aged organic macchiato seasonal cortado trifecta. Mug brewed sugar turkish americano lungo extraction. Ristretto, robusta dripper, half and half cup dark single shot seasonal.<p/>
 
-<footer>123 Latte Lane, Javaville - 555-423-1234
-©Dream Beans Caffe 2013</footer>
+<footer><i>123 Latte Lane, Javaville - 555-423-1234
+©Dream Beans Caffe 2013</i></footer>
 
 </body>
 </html>
