--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <body>
 
 <li><a href="blog/index.html">SuperBlog</a></li>
-<li><a href="coffee/index.html">Coffe</a></li>
+<li><a href="coffee/index.html">Coffee</a></li>
 
 </body>
 </html>
